# rota-robin

./: .editorconfig  .gitignore  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  rota-robin.code-workspace  tailwind.config.ts  tasks.md
.cursor/rules/: document.mdc
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.override.yml  post-create.sh
.github/: dependabot.yml
.github/workflows/: docs.yml
backend/: compose.yml
backend/init/: 00-init.sql
config/: .env.sample  mkdocs.yml
docs/: architecture.md  backend.md  csrf-cors.md  development.md  frontend.md  index.md  logging.md  prd.md  status.md  technical.md
frontend/src/components/dashboard/: BalanceCard.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/contexts/: UserContext.tsx
frontend/src/lib/: mockData.ts
frontend/src/pages/: Login.tsx  ManagementDashboard.tsx  Settings.tsx  TimekeepingHistory.tsx
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: App.tsx  index.css
src/pages/: EmployeeDashboard.tsx  EmployeeDetail.tsx  EmployeeManagement.tsx  Requests.tsx  TimeclockApprovals.tsx  TimeclockEntry.tsx
